backend/game-engine/check_errors.txt
    Checking game-engine v0.1.0 (C:\proiecte-vue\monopoly-world-edition\backend\game-engine)
error[E0063]: missing field `initiator` in initializer of `GameAction`
   --> game-engine\src\game.rs:761:39
    |
761 |                     self.history.push(GameAction::StampTransfer {
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^ missing `initiator`
System.Management.Automation.RemoteException
error[E0063]: missing field `initiator` in initializer of `GameAction`
    --> game-engine\src\game.rs:2190:35
     |
2190 |                 self.history.push(GameAction::StampTransfer {
     |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^ missing `initiator`
System.Management.Automation.RemoteException
error[E0004]: non-exhaustive patterns: `GameAction::GoToJail { .. }` and `GameAction::Move { .. }` not covered
    --> game-engine\src\game.rs:1278:27
     |
1278 |                     match action {
     |                           ^^^^^^ patterns `GameAction::GoToJail { .. }` and `GameAction::Move { .. }` not covered
     |
note: `GameAction` defined here
    --> game-engine\src\game.rs:44:10
     |
  44 | pub enum GameAction {
     |          ^^^^^^^^^^
...
  47 |     GoToJail { player_idx: usize },
     |     -------- not covered
  48 |     Move { player_idx: usize, from: u8, to: u8 },
     |     ---- not covered
     = note: the matched value is of type `GameAction`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
     |
1343 ~                         },
1344 +                         GameAction::GoToJail { .. } | GameAction::Move { .. } => todo!()
     |
System.Management.Automation.RemoteException
Some errors have detailed explanations: E0004, E0063.
For more information about an error, try `rustc --explain E0004`.
error: could not compile `game-engine` (lib) due to 3 previous errors
